--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="cta-buttons">
-                <a href="#" class="btn btn-primary btn-lg animate__animated animate__pulse animate__infinite">Buy $HOTTR</a>
+                <a href="https://pump.fun/coin/94a8MNNs9nTo2JVh8F6YHsBjcQM3PXkEc6UqEFq8ysk7" class="btn btn-primary btn-lg animate__animated animate__pulse animate__infinite" target="_blank">Buy $HOTTR</a>
                 <p class="mt-3 cta-text">Join the cutest community in crypto! Early otters get the best fish! 🐟</p>
             </div>
         </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="buy-section">
                     <h4 class="mb-3">Ready to Swim with Us? 🏊‍♂️</h4>
-                    <a href="#" class="btn btn-primary btn-lg buy-button animate__animated animate__pulse animate__infinite">Buy $HOTTR Now! 🚀</a>
+                    <a href="https://pump.fun/coin/94a8MNNs9nTo2JVh8F6YHsBjcQM3PXkEc6UqEFq8ysk7" class="btn btn-primary btn-lg buy-button animate__animated animate__pulse animate__infinite" target="_blank">Buy $HOTTR Now! 🚀</a>
                 </div>
                 <p class="disclaimer mt-4">$HOTTR - Where Every Wave Leads to the Moon! 🌊🚀</p>
                 <p class="small-text">Remember: Together we HODL, Together we Thrive! 🦦</p>
